--- a/Exercice7/style.css
+++ b/Exercice7/style.css
@@ -51,3 +51,19 @@ section {
     margin-bottom: 20px;
 }
 
+/* Styles spécifiques pour les écrans jusqu'à 768px */
+@media (max-width: 768px ){
+    h1 {
+        font-size: 20px;
+    }
+
+    nav ul{
+        flex-direction: column;
+        align-items: center; 
+    }
+
+    nav li {
+        margin-right: 0; 
+        margin-bottom: 10px; 
+    }
+}
